--- a/code/configs/vmamba_tiny.yaml
+++ b/code/configs/vmamba_tiny.yaml
@@ -2,7 +2,8 @@ MODEL:
   TYPE: vssm
   NAME: vssm_tiny
   DROP_PATH_RATE: 0.2
-  PRETRAIN_CKPT: "../code/pretrained_ckpt/vmamba_tiny_e292.pth"
+  # PRETRAIN_CKPT: "../code/pretrained_ckpt/vmamba_tiny_e292.pth"
+  PRETRAIN_CKPT: "/content/drive/MyDrive/Prashant/Mamba-UNet-MICCAI/code/pretrained_ckpt/vmamba_pretrained.pth"
   VSSM:
     EMBED_DIM: 96
     DEPTHS: [ 2, 2, 2, 2 ]
